--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "^6.10.1",
     "@types/multer": "^1.4.13",
     "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.2",
     "multer": "^2.0.1",
